Fri May 16 13:14:30 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Use "xstrdup (foo)" not "xstrdup(foo)" as
	specified in HACKING.

Fri May 16 15:10:37 1997  Norbert Kiesel  <nk@cosa.de>

	* modules.c (do_module): initialize optind to 0.  use local copies
 	of optarg's (because they might me freed within free_names).

Thu May 15 11:50:15 1997  Norbert Kiesel  <nk@cosa.de>

	* main.c (main): initialize optind to 0.  use local copies of
	optarg's (because they might me freed within read_cvsrc).

	* cvsrc.c (read_cvsrc): free old argv after constructing a new
	one.  This fixes a memory leak.

	* recurse.c (start_recursion): use free_names() instead of
	reimplementing it

	* rcs.c (RCS_deltas): free branchversion (memory leak).

	* parseinfo.c (Parse_Info): free some vars (3 memory leaks).

	* logmsg.c (logfile_write): free str_list_format (memory leak).

	* watch.c (watch_addremove), (watchers), update.c (update), tag.c
 	(cvstag), status.c (status), rtag.c (rtag), remove.c (cvsremove),
 	release.c (release), patch.c (patch), log.c (cvslog), import.c
 	(import), history.c (history), edit.c (watch_onoff), (edit),
 	(unedit), (editors), diff.c (diff), commit.c (commit), checkout.c
 	(checkout), add.c (add): initialize optind to 0

	* diff.c (diff_fileproc): cosmetic change (whitespace added).

	* checkout.c (checkout): move local variable definition into the
	block where the variable is used.

	* client.c (update_entries): initialize some local variables to shut up
	gcc -O -Wall.

	* buffer.c (buf_read_line): initialize a local variable to shut up
	gcc -O -Wall.
		   

Wed May 14 16:29:50 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* admin.c (admin): When sending options to server, don't try to
	send av[ac].  It may contain one of the names that we'll send in
	send_file_names (which caused tests like keyword-6 to work,
	sort of accidentally), or it may contain NULL (which would tend to
	cause a coredump).